--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,11 +153,47 @@ background-color: var(--yellow) !important;
 .input-main div input{
 outline: 0;
 }
+.team-head{
+font-size: 22px;
+color: var(--bluecolor);
 
+}
+.team-para{
+font-size: 16px;
+color: var(--paracolor);
 
+}
+#take{
+background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) , rgba(0, 0, 0, 0.5)),  url(../images/background-15.jpg);
+background-size: cover;
+padding: 60px 0;
+height: 500px;
+margin: 70px 0;
 
+}
+.take-icon{
+color: var(--yellow);
+font-size: 51px;
+}
+.take-icon2{
+font-size: 51px;
 
+}
+.numbers{
+font-size: 51px;
 
+}
+.maria-head{
+color: var(--bluecolor);
+}
+.maria-para{
+color: var(--paracolor);
+font-size: 18px;
+}
+#logo{
+background-color: #f2f2f2;
+
+}
 
 
 
